# synthetic_vae_generator

./: .gitignore  DESIGN.md  README.md  RESULTS.md  make_cohort.ipynb  pyproject.toml  synthvae_writeup.ipynb
example_cohort/: vae_OMIM_103580_0.json  vae_OMIM_103580_1.json  vae_OMIM_103580_2.json  vae_OMIM_103580_3.json  vae_OMIM_103580_4.json  vae_OMIM_115200_0.json  vae_OMIM_115200_1.json  vae_OMIM_115200_2.json  vae_OMIM_115200_3.json  vae_OMIM_115200_4.json  vae_OMIM_117360_0.json  vae_OMIM_117360_1.json  vae_OMIM_117360_2.json  vae_OMIM_117360_3.json  vae_OMIM_117360_4.json  vae_OMIM_122470_0.json  vae_OMIM_122470_1.json  vae_OMIM_122470_2.json  vae_OMIM_122470_3.json  vae_OMIM_122470_4.json  vae_OMIM_129600_0.json  vae_OMIM_129600_1.json  vae_OMIM_129600_2.json  vae_OMIM_129600_3.json  vae_OMIM_129600_4.json  vae_OMIM_130050_0.json  vae_OMIM_130050_1.json  vae_OMIM_130050_2.json  vae_OMIM_130050_3.json  vae_OMIM_130050_4.json  vae_OMIM_142900_0.json  vae_OMIM_142900_1.json  vae_OMIM_142900_2.json  vae_OMIM_142900_3.json  vae_OMIM_142900_4.json  vae_OMIM_146510_0.json  vae_OMIM_146510_1.json  vae_OMIM_146510_2.json  vae_OMIM_146510_3.json  vae_OMIM_146510_4.json  (+455 more)
scripts/: build_notebook.py  generate.py  robustness.py
synthvae/: __init__.py  baselines.py  config.py  data.py  eval.py  vae.py
