[project]
name = "synthvae"
version = "0.1.0"
description = "Realistic synthetic phenopacket generation (CVAE) for Exomiser-reranking benchmarks"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.11",
]

[project.optional-dependencies]
vae = ["torch>=2.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synthvae"]
